--- a/end/build.gradle
+++ b/end/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
   ext.kotlin_version = '1.3.31'
+  ext.kotlin_coroutines_version = '1.2.1'
   repositories {
     google()
     jcenter()
